--- a/templates/index.html
+++ b/templates/index.html
@@ -17,16 +17,21 @@
 <script src="js/bootstrap.min.js"></script>
 
 <!--자바스크립트파일 호출-->
-<script type="text/javascript"> src = "./js_v01.js" </script>
+<script type="text/javascript"  src = "./js_v01.js"> </script>
 
 
 <style>
     .total_wrap {
         display: flex;
+        font-family: "맑은 고딕 Semilight";
     }
 
     .wrap {
         margin: 0 auto;
+    }
+
+    .txt {
+        font-family: "맑은 고딕 Semilight";
     }
 
 </style>
@@ -37,7 +42,25 @@
     <div class="wrap">
 
         <p>글쓰기</p>
-        <textarea class="form-control" rows="10" id="main_text"></textarea>
+        <textarea class="form-control txt" rows="1" cols="60" id="main_title" onkeyup="letterCalc();letterTrim();if_changed();save()"
+                  autocomplete="off"></textarea>
+        <br>
+        <textarea class="form-control txt" rows="10" cols="60" id="main_text" onkeyup="letterCalc();letterTrim();if_changed();save()"
+                  autocomplete="off"></textarea>
+        <br>
+        <span>글자수:</span>
+        <output type="number" id="letterNum" value="0">0</output>
+        <!--        <input type="number" id="result" value="0" readonly>-->
+        <span>자(공백포함) /</span>
+        <output type="number" id="letterNum_trimmed" value="0">0</output>
+        <!--        <input type="number" id="result" value="0" readonly>-->
+        <span>자(공미포) </span>
+        <br>
+        <span>타이핑 수:</span>
+        <span id="lc">0</span>
+        <span>자</span>
+        <button id="button_num_reset" onclick="num_reset()">리셋</button>
+        <button id="button_reset" onclick="page_reset()">지우기(작동을하지않는다..)</button>
     </div>
 </div>
 
